k8s_configs/visit_sched/visit_sched_deply.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visit-sched
  namespace: visit-sched-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: visit-sched
  template:
    metadata:
      labels:
        app: visit-sched
    spec:
      serviceAccountName: visit-sched
      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
        - name: visit-sched
          image: gambolkf/ersms-visit_sched@sha256:88aae2d2bfcab1df549083a15055b701c93afc16b8083c7435da08bb9e1d71fd
          command: ["bash"]
          args: ["entrypoint.sh", "run-https"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/visit-sched/docs
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: "/var/gcpsm"
              name: elasticsearch-cacert
              readOnly: true
            - mountPath: "/var/certs/ssl"
              name: ssl
              readOnly: true
      volumes:
        - name: elasticsearch-cacert
          secret:
            secretName: elasticsearch-cacert
            items:
            - key: ersms-elasticsearch-cacert
              path: es_cacart.pem
        - name: ssl
          secret:
            secretName: visit-sched-tls
