k8s_configs/visit_sched/visit_sched_service.yml
apiVersion: v1
kind: Service
metadata:
  name: visit-sched-service
  namespace: visit-sched-ns
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      appProtocol: HTTPS
  selector:
    app: visit-sched
  type: NodePort
